Cards/DMC5480/Code/VC6.0/DMC5480.h

typedef unsigned short      WORD;
typedef unsigned long		DWORD;
//---------------------   板卡初始和配置函数  ----------------------
/********************************************************************************
** 函数名称: d5480_board_init
** 功能描述: 控制板初始化，设置初始化和速度等设置
** 输　  入: 无
** 返 回 值: 0：无卡； 1-8：成功(实际卡数) 
    
*********************************************************************************/
DMC5480_API int __stdcall d5480_board_init(void);
/********************************************************************************
** 函数名称: d5480_board_close
** 功能描述: 关闭所有卡
** 输　  入: 无
** 返 回 值: 无

*********************************************************************************/
DMC5480_API void __stdcall d5480_board_close(void);
 

/********************************************************************************
** 函数名称: 控制卡复位
** 功能描述: 复位所有卡，只能在初始化完成之后调用．
** 输　  入: 卡号
** 返 回 值: 错误码

*********************************************************************************/
DMC5480_API DWORD __stdcall d5480_board_reset(WORD card);
DMC5480_API DWORD __stdcall d5480_get_card_version(WORD card);
DMC5480_API DWORD __stdcall d5480_get_card_soft_version(WORD card, WORD* firm_id, DWORD* sub_firm_id);
DMC5480_API DWORD __stdcall d5480_get_client_ID(WORD card);
DMC5480_API DWORD __stdcall d5480_get_lib_version(void);
DMC5480_API DWORD __stdcall d5480_get_card_ID(WORD card);
DMC5480_API DWORD __stdcall d5480_get_total_axes(WORD card);
DMC5480_API DWORD __stdcall d5480_test_software(WORD card, WORD testid, WORD para1, WORD para2, WORD para3);
DMC5480_API DWORD __stdcall d5480_test_hardware(WORD card);
DMC5480_API DWORD __stdcall d5480_download_firmware(WORD card, const char* pfilename);
//脉冲输入输出配置
DMC5480_API DWORD __stdcall d5480_set_pulse_outmode(WORD axis,WORD outmode);
DMC5480_API DWORD __stdcall d5480_counter_config(WORD axis,WORD mode);
//添加配置读
DMC5480_API DWORD __stdcall d5480_get_pulse_outmode(WORD axis,WORD *outmode);
DMC5480_API DWORD __stdcall d5480_get_counter_config(WORD axis,WORD* mode);
DMC5480_API DWORD __stdcall d5480_get_config_SD_PIN(WORD axis,WORD *enable, WORD *sd_logic,WORD *sd_mode);
 
DMC5480_API DWORD __stdcall d5480_get_config_INP_PIN(WORD axis,WORD* enable,WORD* inp_logic);
DMC5480_API DWORD __stdcall d5480_get_config_ERC_PIN(WORD axis,WORD* enable,WORD* erc_logic,
				WORD* erc_width,WORD* erc_off_time);
DMC5480_API DWORD __stdcall d5480_get_config_ALM_PIN(WORD axis, WORD* enable, WORD* alm_logic,WORD* alm_action);
DMC5480_API DWORD __stdcall d5480_get_config_EL_PIN(WORD axis, WORD* el_logic, WORD* el_mode);
DMC5480_API DWORD __stdcall d5480_get_config_HOME_PIN_logic(WORD axis,WORD* org_logic,WORD* filter);
DMC5480_API DWORD __stdcall d5480_get_config_home_mode(WORD axis,WORD* home_dir, double* vel,WORD* home_mode,WORD* EZ_count);
DMC5480_API DWORD __stdcall d5480_get_handwheel_inmode(WORD axis, WORD * inmode, double* multi);
DMC5480_API DWORD __stdcall d5480_get_config_LTC_PIN(WORD axis,WORD* ltc_logic, WORD* ltc_mode);
DMC5480_API DWORD __stdcall d5480_get_config_latch_mode(WORD cardno, WORD* all_enable);
//专用信号设置函数
DMC5480_API DWORD __stdcall d5480_config_SD_PIN(WORD axis,WORD enable, WORD sd_logic,WORD sd_mode);
DMC5480_API DWORD __stdcall d5480_config_INP_PIN(WORD axis,WORD enable,WORD inp_logic);
DMC5480_API DWORD __stdcall d5480_config_ERC_PIN(WORD axis,WORD enable,WORD erc_logic,
				WORD erc_width,WORD erc_off_time);
DMC5480_API DWORD __stdcall d5480_config_EMG_PIN(WORD cardno, WORD option, WORD emg_logic);
DMC5480_API DWORD __stdcall d5480_get_config_EMG_PIN(WORD cardno, WORD* enbale, WORD* emg_logic);
DMC5480_API DWORD __stdcall d5480_config_ALM_PIN(WORD axis, WORD enable, WORD alm_logic,WORD alm_action);
//new
DMC5480_API DWORD __stdcall d5480_config_EL_PIN(WORD axis, WORD el_logic, WORD el_mode);
DMC5480_API DWORD __stdcall d5480_config_HOME_PIN_logic(WORD axis,WORD org_logic,WORD filter);
DMC5480_API DWORD __stdcall d5480_write_SEVON_PIN(WORD axis, WORD on_off);
DMC5480_API int __stdcall d5480_read_SEVON_PIN(WORD axis);
DMC5480_API DWORD __stdcall d5480_write_ERC_PIN(WORD axis, WORD sel);
DMC5480_API int __stdcall d5480_read_RDY_PIN(WORD axis);
DMC5480_API DWORD __stdcall d5480_set_backlash(WORD axis, long backlash);
DMC5480_API DWORD __stdcall d5480_get_backlash(WORD axis, long* backlash);
//通用输入/输出控制函数
DMC5480_API int __stdcall d5480_read_inbit(WORD cardno, WORD bitno);
DMC5480_API DWORD __stdcall d5480_get_config_latch_mode(WORD cardno, WORD* all_enable);