Cards/DMC5480/Code/C#/DMC5480.cs

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;


namespace csDmc5480
{
    public class Dmc5480
    {
         //--------------------- Board initial and configuration functions--------------------- -
         /************************************************* *******************************
         ** Function name: d5480_board_init
         ** Function description: Control board initialization, setting initialization and speed settings
         ** Input: None
         ** Return value: 0: no card; 1-8: success (the actual number of cards)
         **
         ************************************************** *******************************/
        [DllImport("DMC5480.dll", EntryPoint = "d5480_board_init", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_board_init();

        /************************************************* *******************************
         ** Function name: d5480_board_close
         ** Function description: Close all cards
         ** Input: None
         ** Return value: None
         ** Date: 2007.02.1
         ************************************************** *******************************/
        [DllImport("DMC5480.dll", EntryPoint = "d5480_board_close", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void  d5480_board_close(); 

        /************************************************* *******************************
         ** Function name: Control card reset
         ** Function description: Reset all cards, which can only be called after the initialization is completed.
         ** Input: card number
         ** Return value: Error code
         ** Date:
         ************************************************** *******************************/
        [DllImport("DMC5480.dll", EntryPoint = "d5480_board_reset", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_board_reset(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_card_version", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_card_version(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_card_soft_version", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_card_soft_version(UInt16 card, ref UInt16 firm_id, ref UInt32 sub_firm_id);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_client_ID", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_client_ID(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_lib_version", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_lib_version();
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_card_ID", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_card_ID(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_total_axes", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_total_axes(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_test_software", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_test_software(UInt16 card, UInt16 testid, UInt16 para1, UInt16 para2, UInt16 para3);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_test_hardware", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_test_hardware(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_download_firmware", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_download_firmware(UInt16 card, ref char pfilename);


        // Pulse input and output configuration

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_pulse_outmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_pulse_outmode(UInt16 axis,UInt16 outmode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_counter_config", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_counter_config(UInt16 axis,UInt16 mode);


        //Add configuration read

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_pulse_outmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_pulse_outmode(UInt16 axis,ref UInt16 outmode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_counter_config", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_counter_config(UInt16 axis,ref UInt16 mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_SD_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_SD_PIN(UInt16 axis,ref UInt16 enable, ref UInt16 sd_logic,ref UInt16 sd_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_INP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_INP_PIN(UInt16 axis,ref UInt16 enable,ref UInt16 inp_logic);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_ERC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_ERC_PIN(UInt16 axis,ref UInt16 enable,ref UInt16 erc_logic,
				        ref UInt16 erc_width,ref UInt16 erc_off_time);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_ALM_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_ALM_PIN(UInt16 axis, ref UInt16 enable, ref UInt16 alm_logic,ref UInt16 alm_action);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_EL_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_EL_PIN(UInt16 axis, ref UInt16 el_logic, ref UInt16 el_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_HOME_PIN_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_HOME_PIN_logic(UInt16 axis,ref UInt16 org_logic,ref UInt16 filter);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_home_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_home_mode(UInt16 axis,ref UInt16 home_dir, ref double vel,ref UInt16 home_mode,ref UInt16 EZ_count);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_handwheel_inmode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_handwheel_inmode(UInt16 axis,ref UInt16 inmode,ref double multi);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_LTC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_LTC_PIN(UInt16 axis,ref UInt16 ltc_logic, ref UInt16 ltc_mode);
        
       //[DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_latch_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
         //public static extern UInt32 d5480_get_config_latch_mode(UInt16 cardno, ref UInt16 all_enable);


        // Dedicated signal setting function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_SD_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_SD_PIN(UInt16 axis,UInt16 enable, UInt16 sd_logic,UInt16 sd_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_INP_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_INP_PIN(UInt16 axis,UInt16 enable,UInt16 inp_logic);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_ERC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_ERC_PIN(UInt16 axis,UInt16 enable,UInt16 erc_logic,
				        UInt16 erc_width,UInt16 erc_off_time);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_EMG_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_EMG_PIN(UInt16 cardno, UInt16 option, UInt16 emg_logic);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_EMG_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_EMG_PIN(UInt16 cardno, ref UInt16 enbale, ref UInt16 emg_logic);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_ALM_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_ALM_PIN(UInt16 axis, UInt16 enable, UInt16 alm_logic,UInt16 alm_action);
        //new

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_EL_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_EL_PIN(UInt16 axis, UInt16 el_logic, UInt16 el_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_HOME_PIN_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_HOME_PIN_logic(UInt16 axis,UInt16 org_logic,UInt16 filter);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_write_SEVON_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_write_SEVON_PIN(UInt16 axis, UInt16 on_off);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_SEVON_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_read_SEVON_PIN(UInt16 axis);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_write_ERC_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_write_ERC_PIN(UInt16 axis, UInt16 sel);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_RDY_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_read_RDY_PIN(UInt16 axis);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_backlash", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_backlash(UInt16 axis, Int32 backlash);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_backlash", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_backlash(UInt16 axis, ref Int32 backlash);

        //General input/output control functions

        [DllImport("DMC5480.dll", EntryPoint = "d5480_read_inbit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_read_inbit(UInt16 cardno, UInt16 bitno);
